# Air-Pressure-System-APS-

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
saved_models/1738172594/: model.pkl
src/: utilsmongoDB.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: database.py
src/constants/training_pipeline/: __init__.py
src/data_access/: sensor_data.py
src/entity/: artifact_entity.py  config_entity.py
src/ml/metric/: classification_metric.py
src/ml/model/: estimator.py
src/pipeline/: training_pipeline.py
src/utils/: main_utils.py
templates/: error.html  index.html
uploads/: unit_test01.csv
