[project]
name = "src"
version = "0.0.1"
description = "A Python package for building and deploying machine learning models for air pressure systems"
authors = [{name = "Ankit vishwakarma ", email = "ankit01122001@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}